--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,9 +8,9 @@
     </li>
     -->
     <a href="#" class="cryptedmail"
-    data-name="info"
-    data-domain="example"
-    data-tld="org"
+    data-name="iulian"
+    data-domain="cios"
+    data-tld="ro"
     onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld; return false;"></a>
     {% endif %}
 
