--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,16 +2,9 @@
   <ul class="list-unstyled contact-list">
 
     {% if sidebar.email %}
-    <!--
     <li class="email"><i class="fas fa-envelope"></i>
-      <a href="mailto:{{ sidebar.email }}">{{ sidebar.email }}</a>
+      <a href="#" class="cryptedmail" data-name="iulian" data-domain="cios" data-tld="ro" onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld; return false;"></a>
     </li>
-    -->
-    <a href="#" class="cryptedmail"
-    data-name="iulian"
-    data-domain="cios"
-    data-tld="ro"
-    onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld; return false;"></a>
     {% endif %}
 
     {% if sidebar.phone %}
