--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,10 @@ h1, h2, h3, h4, h5, h6  {
     content: attr(data-name) "@" attr(data-domain) "." attr(data-tld);
 }
 
+.cryptedphone:after {
+    content: attr(data-number);
+}
+
 a {
     color: darken($theme-color, 15%);
     &:hover {
